chart wrapping css fix, moved event coloring changing to object

--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,6 @@
   background: #7F7FD5;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to bottom, #91EAE4, #86A8E7, #7F7FD5);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to bottom, #91EAE4, #86A8E7, #7F7FD5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  
   min-width: 15vw;
   min-height: 100%;
 }
@@ -90,6 +89,7 @@
   background: linear-gradient(to bottom, #FFFFFF, #FFEFBA); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   flex-grow: 8;
   padding: 1rem;
+
 }
 .wrapper {
   flex-grow: 8;
@@ -151,9 +151,10 @@
 }
 /* Dashboard View */
 .metrics {
-  text-align: left;
+  text-align: center;
   display: flex;
   justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 summary h4{
   margin: 0px;
